# electric_generation_planning

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  manifest.json  pyproject.toml  requirements.txt  venv.txt
.claude/agents/: code-reviewer.md  simplify-auditor.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/comment-docstring/: SKILL.md
.claude/skills/security-scan/: SKILL.md
.claude/skills/simplify-audit/: SKILL.md
docker/: Dockerfile  docker_create.txt
notebooks/: plot_test.ipynb
scripts/: update_manifest.py
src/: LP.py  LP_ortools_func.py  app.py  db.py  parameters.py  profiles.csv  utils.py
tests/: test_app.py  test_lp.py
